--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ACCESS_TOKEN="The access token for the API"
 PROJECT_ID="The project ID"
-DOMAIN="The domain"
+DOMAIN="The domain of gorules. For example "fperalta" if the project lives in fperalta.gorules.io"
+DOCUMENT_PATH="The document path of your decision"
